--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,10 @@ repositories {
 dependencies {
     
     implementation 'org.usb4java:usb4java-javax:1.3.0'
-
+    
+    api('org.usb4java:usb4java-javax:1.3.0'){
+    	transitive = true
+    }
 }
 
 
