--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,7 @@ dependencies {
     
     implementation 'org.usb4java:usb4java-javax:1.3.0'
     
-    api('org.usb4java:usb4java-javax:1.3.0'){
-    	transitive = true
-    }
+    api 'org.usb4java:usb4java-javax:1.3.0'
 }
 
 
