Tweaking names again to try to get recognized package

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'maven-publish'
 }
 
-group = 'trw.pololu.tic'
+group = 'com.github.theredwagoneer.javatic'
 version = '1.001'
 
 repositories {
